# qlik-lineage-mcp

./: .env.example  .gitignore  .mcp.json.example  PROJECT_OVERVIEW.md  README.md  guideline-mcp-qlik-data-lineage.md  pyproject.toml
src/qlik_lineage_mcp/: __init__.py  config.py  models.py  qlik_client.py  server.py  session_cache.py
src/qlik_lineage_mcp/tools/: __init__.py  ghost_files.py  unused_columns.py
tests/: conftest.py  test_ghost_files.py  test_parsers.py  test_server_wiring.py  test_session_cache.py  test_unused_columns.py
