[project]
name = "qlik-lineage-mcp"
version = "0.1.0"
description = "MCP server for Qlik Cloud data file lineage analysis (unused columns, ghost files)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Qlik Lineage MCP contributors" }]
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
qlik-lineage-mcp = "qlik_lineage_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qlik_lineage_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
